<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">App</string>
    <string name="action_buscar">Buscar</string>
    <string name="action_add">Add</string>
    <string name="action_foto">Renombrar</string>
    <string name="action_foto0">Copiar</string>
    <string name="action_foto1">Cortar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_foto2">Eliminar</string>
    <string name="action_foto3">Mover</string>
    <string name="content">content</string>
    <string name="title_activity_ejercicio2">Ejercicio2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
