<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_foto"
        android:orderInCategory="100"
        android:title="@string/action_foto"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_foto0"
        android:orderInCategory="100"
        android:title="@string/action_foto0"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_foto1"
        android:orderInCategory="100"
        android:title="@string/action_foto1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_foto2"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/action_foto2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_foto3"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/action_foto3"
        app:showAsAction="never" />
</menu>
